--- a/css/style.scss
+++ b/css/style.scss
@@ -4,99 +4,64 @@ Theme URI:    https://github.com/pp19dd/voa-top-content
 Description:  Custom theme for VOA Blogs
 Author:       Stephen Mekosh and Dino Beslagic
 Author URI:   https://www.voanews.com/
-Version:      2.0
+Version:      1.0
 */
 
 
 
-@import 'html5reset';
 @import 'colors';
 
-
-
-html { font-size: 1.125rem; /* ~18px */ }
-
-body, select, input, textarea { color: $offblack; }
-
+/*
+need reset
+*/
+* { margin:0; padding: 0; }
+body, html { overflow-x: hidden; width:100%; height:100%; }
+body { background-color: #eee; }
+article { overflow: hidden }
+/*
 body {
-	background-color: $bodybg;
+	background-image:url(http://localhost/top-content/2016-08_mockup-expanded_r2_deskgrid-default.jpg);
+	background-repeat:no-repeat;
+}
+
+rows { opacity: 0.8; padding-top: 186px;}
+*/
+
+header, rows, footer {
 	font-family: 'Lato', sans-serif;
+	font-size: 18px;
 }
 
-a { color: $voablue; }
-a:hover { color: $voared; cursor: pointer; }
-
-/* Custom text-selection colors (remove any text shadows: http://twitter.com/miketaylr/status/12228805301) */
-::-moz-selection { background: $highlight; color: $offwhite; text-shadow: none; }
-::selection      { background: $highlight; color: $offwhite; text-shadow: none; }
-
-/*	j.mp/webkit-tap-highlight-color */
-a:link { -webkit-tap-highlight-color: $highlight; }
-
-ins { background-color: $highlight; color: $offblack; text-decoration: none; }
-mark { background-color: $highlight; color: $offblack; font-style: italic; font-weight: bold; }
-
-/* Mozilla dosen't style placeholders by default */
-input:-moz-placeholder    { color: $voagray; }
-textarea:-moz-placeholder { color: $voagray; }
-
-/* let's give blockquotes *some* default styling, because unstyled blockquotes are dangerous */
-blockquote { padding: 1em; background: $bodybg; }
-
-
-
-img {
-	display: block;
-	height: auto;
-	width: 100%;
-}
-
-
-
-
-
-// body, html { overflow-x: hidden; width:100%; height:100%; }
-// article { overflow: hidden }
-
-/* helper classes ************************************************************/
-
-.container {
+rows {
 	display: flex;
-	align-items: center;
-	margin: 0 auto;
+	margin: auto;
 	max-width: 1200px;
-	width: 100%;
 }
 
-
-
-
-
-
-
-
-#voa-header {
-	background-color: $voablue;
-	color: $offwhite;
+body > header {
+	background-color: #1330bf;
+	color: white;
 }
 
-#voa-header > .container {
+body > header inner {
+	margin:auto;
+	display: flex;
+	max-width: 1200px;
 	justify-content: space-between;
+	align-items: center;
 }
 
-.voa-logo { height: 30px; width: 71px; }
-
-#voa-header a {
-	color: $offwhite;
+body > header a {
+	color: white;
 	text-decoration: none;
 }
 
-#voa-header nav {
+body > header menu {
 	display: flex;
 	flex-direction: row;
 }
 
-#voa-header nav a {
+body > header menu a {
 	font-size: .8em;
 	font-weight: 700;
 	letter-spacing: .025em;
@@ -105,53 +70,16 @@ img {
 	transition: background-color 200ms linear;
 }
 
-#voa-header nav a:hover {
-	background-color: $bodybg;
-	color: $voablue;
+body > header menu a:hover {
+	background-color: #eee;
+	color: #1330bf;
 }
-
-.blog-head { border-bottom: 1px solid $lightgray; }
-
-
-
-
-
-.content > *:not(.wp-caption) {
-	margin: 0 .5rem 1em .5rem;
-}
-
-.wp-caption {
-	max-width: 100%;
-	margin-bottom: 1em;
-	width: 100% !important;
-}
-
-.wp-caption-text {
-	font-size: .8rem;
-	margin: .25em .5rem;
-}
-
-
-
-
-main > .article {
-	background: $offwhite;
-}
-
-h1.page-title {
-	font-size: 1.5rem;
-}
-
-
-
-
-
 
 /* ======================================================================== */
 
 footer {
-	background-color: $offblack;
-	color: $offwhite;
+	background-color: #333;
+	color: #f8f8f8;
 }
 
 footer inner {
@@ -163,7 +91,7 @@ footer inner {
 }
 
 footer item a {
-	color: $offwhite;
+	color: #f8f8f8;
 	display: inline-block;
 	font-size: .8em;
 	font-weight: bold;
@@ -175,14 +103,15 @@ footer item a {
 /* ======================================================================== */
 
 h1 {
-	color: $offblack;
+	color: #333;
 	text-align: center;
 	margin: auto;
+	font-family: 'Lato Light', sans-serif;
 	font-weight: 300;
 	font-size: 3.5em;
 }
 
-h1 a, h1 a:hover { color: $offblack; text-decoration: none; }
+h1 a, h1 a:hover { color: #333; text-decoration: none; }
 
 h1.site-title { line-height: 100%; margin: .75em auto; padding: 0; }
 
@@ -215,8 +144,6 @@ breakup h2 {
 
 rows {
 	display: flex;
-	margin: auto;
-	max-width: 1200px;
 	flex-direction: column;
 }
 
@@ -284,10 +211,10 @@ part.two byline {
 	margin-top: .5em;
 }
 
-part a { color: $offblack !important }
-part a:hover { color: $voablue !important; }
+part a { color: #333 !important }
+part a:hover { color: #1330bf !important; }
 
-rows article {
+article {
 	display:flex;
 	flex-direction: column;
 }
@@ -298,6 +225,7 @@ row.rows_3 inner, row.rows_1 inner {
 }
 
 headline {
+	font-family: 'Lato', sans-serif;
 	font-weight: bold;
 	font-size:1.5em;
 	line-height:1.3em;
@@ -377,10 +305,10 @@ continue span { padding:10px; background-color: rgba(19,49,191, 1); color: white
 }
 
 .video-icon-inner {
-	background-color: $voablue;
-	border-left: 4px solid $bodybg;
-	border-bottom: 4px solid $bodybg;
-	color: $offwhite;
+	background-color: #1330bf;
+	border-left: 4px solid #fff;
+	border-bottom: 4px solid #fff;
+	color: #fff;
 	text-align: center;
 }
 
@@ -397,7 +325,7 @@ continue span { padding:10px; background-color: rgba(19,49,191, 1); color: white
 .lang-voa-english { display: none; visibility: hidden; }
 
 .language-service-inner {
-	background-color: $voared;
+	background-color: #d41010;
 	color: #fff;
 	font-size: .8em;
 	padding: .25em .8em .25em .5em;
@@ -406,8 +334,24 @@ continue span { padding:10px; background-color: rgba(19,49,191, 1); color: white
 
 
 /* ======================================================================== */
+
+@media all and (max-width:1200px){
+
+	.single article content img,
+	.page article content img,
+	.archive article content img,
+	article inner img {
+		height: auto;
+		width: 100%;
+	}
+}
+
+/* ======================================================================== */
 /* single article */
 /* ======================================================================== */
+body.single {
+	background-color: #eee;
+}
 
 .single .rows_1,
 .page .rows_1,
@@ -481,6 +425,14 @@ continue span { padding:10px; background-color: rgba(19,49,191, 1); color: white
 
 
 
+::-moz-selection {
+	background-color: #7FDBFF;
+}
+
+::selection {
+	background-color: #7FDBFF;
+}
+
 /* ======================================================================== */
 /* sidebar on single articles */
 /* ======================================================================== */
@@ -497,16 +449,16 @@ sidebar-inner {
 }
 
 sidebar h2 {
-	border-bottom: 4px solid $voablue;
+	border-bottom: 4px solid #1330bf;
 	font-size:0.8em;
-	color: $voablue;
+	color: #1330bf;
 	padding-bottom: .25em;
 	padding-left: 1em;
 	text-transform: uppercase;
 }
 sidebar h2 a,
 sidebar h2 a:hover {
-	color: $voablue !important;
+	color: #1330bf !important;
 	text-decoration: none !important;
 }
 
@@ -539,6 +491,8 @@ a.rsswidget img { display: none }
 
 leading { display: flex; flex-direction: column; }
 leading img { width: 100%; max-width: 100%;  }
+
+antirows img { }
 
 
 
@@ -608,7 +562,7 @@ leading img { width: 100%; max-width: 100%;  }
 .author-social { flex-grow: 2; text-align: right; }
 
 .author-pubdate .author {
-	color: $offblack;
+	color: #333;
 	font-size: 1em;
 	font-style: normal;
 	font-weight: 700;
@@ -687,7 +641,7 @@ leading img { width: 100%; max-width: 100%;  }
 
 .single content .article-categories header,
 .single content .article-tags header {
-	background-color: $voablue;
+	background-color: #1330bf;
 	color: #fff;
 	display: block;
 	font-size: .8em;
@@ -699,7 +653,7 @@ leading img { width: 100%; max-width: 100%;  }
 .single content .header-text { padding-left: .8em; }
 
 .single content .article-categories a, .single content .article-tags a { color: #666; text-decoration: none; }
-.single content .article-categories a:hover, .single content .article-tags a:hover { color: $voablue; text-decoration: underline; }
+.single content .article-categories a:hover, .single content .article-tags a:hover { color: #1330bf; text-decoration: underline; }
 
 
 .single content .article-body .wp-caption img {
@@ -785,16 +739,16 @@ leading img { width: 100%; max-width: 100%;  }
 .no-next-post p { margin-left: 1em; text-align: center; }
 
 .single content .adjacent-post-inner p > a { color: #999; text-decoration: none; }
-.single content .adjacent-post-inner p > a:hover { color: $voablue; text-decoration: none; }
+.single content .adjacent-post-inner p > a:hover { color: #1330bf; text-decoration: none; }
 
 .single content .adjacent-post-inner h4 {
-	color: $offblack;
+	color: #333;
 	font-size: .8em;
 	font-weight: 700;
 }
 
-.single content .adjacent-post-inner h4 > a { color: $offblack; text-decoration: none; }
-.single content .adjacent-post-inner h4 > a:hover { color: $voablue; text-decoration: none; }
+.single content .adjacent-post-inner h4 > a { color: #333; text-decoration: none; }
+.single content .adjacent-post-inner h4 > a:hover { color: #1330bf; text-decoration: none; }
 
 
 /* article sidebar shortcut teaser *******************************************/
@@ -805,8 +759,8 @@ leading img { width: 100%; max-width: 100%;  }
 
 #comment-shortcut > a {
 	background-color: #fff;
-	border: 2px solid $voablue;
-	color: $voablue;
+	border: 2px solid #1330bf;
+	color: #1330bf;
 	display: block;
 	font-size: 1em;
 	text-decoration: none;
@@ -818,7 +772,7 @@ leading img { width: 100%; max-width: 100%;  }
 }
 
 #comment-shortcut > a > span.comment-icon {
-	background-color: $voablue;
+	background-color: #1330bf;
 	color: #fff;
 	padding: 1em;
 	transition: background-color 1s;
@@ -855,7 +809,7 @@ leading img { width: 100%; max-width: 100%;  }
 /* article comment section ***************************************************/
 
 .comments > header {
-	background: $offblack none repeat scroll 0 0;
+	background: #333 none repeat scroll 0 0;
 	color: #fff;
 	font-size: 0.8em;
 	margin-bottom: 1em;
@@ -953,7 +907,7 @@ leading img { width: 100%; max-width: 100%;  }
 }
 
 .archive-teasers article a {
-	color: $voablue;
+	color: #1330bf;
 	text-decoration: none;
 }
 
@@ -974,8 +928,9 @@ leading img { width: 100%; max-width: 100%;  }
 	border: 1px solid #ccc;
 	border-radius: 5px;
 	box-shadow: 0 1px 1px 0 rgba(0,0,0,.1),0 1px 5px 0 rgba(0,0,0,.1);
-	color: $voablue;
+	color: #1330bf;
 	display: inline-block;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: .8em;
 	letter-spacing: .025em;
 	line-height: 100%;
@@ -1000,7 +955,7 @@ leading img { width: 100%; max-width: 100%;  }
 
 @media (max-width: 1200px) {
 
-	.voa-logo { margin-left: 1em; }
+	logo { margin-left: 1em; }
 
 }
 
@@ -1139,7 +1094,7 @@ leading img { width: 100%; max-width: 100%;  }
 
 @media (max-width: 450px) {
 
-	.voa-logo { margin-left: .5em; }
+	logo { margin-left: .5em; }
 
 	h1 { font-size: 2em; }
 
@@ -1147,7 +1102,7 @@ leading img { width: 100%; max-width: 100%;  }
 
 	row.rows_3 excerpt, row.rows_2 excerpt, row.rows_1 excerpt { display: none !important; }
 
-	#voa-header nav a { padding: 1.25em .8em; }
+	body > header menu a { padding: 1.25em .8em; }
 
 	continue { display: none !important; opacity: 0 !important; visibility: hidden !important; }
 
@@ -1163,7 +1118,7 @@ leading img { width: 100%; max-width: 100%;  }
 
 	h1 { font-size: 1.5em; }
 
-	#voa-header nav a {
+	body > header menu a {
 		font-weight: 400;
 		padding: 1.25em .5em;
 	}
